2008-09-03  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepi
	thru a function call (back to caller).
	* gdb.twreverse/step-reverse.c: Ditto.

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepi.
	* gdb.twreverse/step-reverse.c: Ditto.

	* gdb.twreverse/step-reverse.exp: Add tests for stepping 
	backward into a function call.
	* gdb.twreverse/step-reverse.c: Ditto.

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepping 
	over, into, and out of a function call. 
	* gdb.twreverse/step-reverse.c: Ditto.

2008-09-01  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/step-reverse.exp: New file.
	* gdb.twreverse/step-reverse.c: New file.

2008-09-01  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse: New directory (may be renamed later).
	* gdb.twreverse/Makefile.in: New file.
	* gdb.twreverse/break-reverse.exp: New file.
	* gdb.twreverse/break-reverse.c: New file.
	* configure.in: Add gdb.twreverse directory.
	* configure: Regenerate.

2008-07-17  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* gdb.base/foll-fork.exp: Fix for Linux/VDSO failure.

2008-07-17  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* gdb.base/coremaker.c: Fix for Linux failure in gdb.base/corefile.exp

2008-07-15  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* gdb.cp/class2.exp: fix for failure on spu-elf
	
2008-07-14  Paul Pluzhnikov  <ppluzhnikov@google.com>

	* gdb.cp/class2.exp, gdb.cp/class2.cc: Test for PR2477.
	
2008-07-13  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* gdb.base/randomize.exp: Catch non-Linux targets as untested.

2008-07-12  Vladimir Prus  <vladimir@codesourcery.com>

	* lib/mi-support.exp (mi_expect_stop): Adjust for the new field.

2008-07-11  Kevin Buettner  <kevinb@redhat.com>

	* gdb.arch/e500-regs.exp (decimal_vector): Adjust "v8_int8" portion
	of regexp to account for changes made to GDB in the printing of
	byte vectors.

2008-07-11  Tom Tromey  <tromey@redhat.com>
